# drone_train

./: .gitignore  LICENSE  pyproject.toml
data/: data.yaml
docs/superpowers/plans/: 2026-05-18-yolov8n-ship-training.md
docs/superpowers/specs/: 2026-05-18-yolov8n-ship-training-design.md
scripts/: .nfs000000000a75cbf700000317  train_ship_merged_v3.sh  update.sh
