[project]
name = "drone-train"
version = "0.1.0"
description = "YOLOv8n ship detector training environment"
requires-python = ">=3.12,<3.13"
dependencies = [
    "opencv-python>=4.10.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.3.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
